--- a/site.html
+++ b/site.html
@@ -2,8 +2,61 @@
 <html>
 <head>
     <title>This is my first web page</title>
-</head>
-</html>
+<style>
+
+    p {
+        color: red;
+    }
+
+    a {
+        color: blue;
+    }
+
+h1 {
+ color: #ffc;
+    background-color: #009;
+}
+
+body {
+    font-family: arial, helvetica, sans-serif;
+    font-size: 14px;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+a {
+    text-decoration: none;
+}
+
+strong {
+    font-style: italic;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 1.5em;
+    background-color: #ccc;
+    margin: 20px;
+    padding: 40px;
+}
+
+h2 {
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-color: purple;
+}
+table {
+    background-color: #ccc;
+}
+</style>
 <body>
     <h1>My first web page</h1>
 	   	  <p> <em>How exciting</em> </p>
