website aangepast en css toegevoegd

--- a/site.html
+++ b/site.html
@@ -1,68 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>This is my first web page</title>
-<style>
+<title>CSS Example</title>
+    <link rel="stylesheet" href="style.css">
 
-    p {
-        color: red;
-    }
-
-    a {
-        color: blue;
-    }
-
-h1 {
- color: #ffc;
-    background-color: #009;
-}
-
-body {
-    font-family: arial, helvetica, sans-serif;
-    font-size: 14px;
-}
-
-h1 {
-    font-size: 2em;
-}
-
-h2 {
-    font-size: 1.5em;
-}
-
-a {
-    text-decoration: none;
-}
-
-strong {
-    font-style: italic;
-    text-transform: uppercase;
-}
-
-h2 {
-    font-size: 1.5em;
-    background-color: #ccc;
-    margin: 20px;
-    padding: 40px;
-}
-
-h2 {
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-color: purple;
-}
-table {
-    background-color: #ccc;
-}
-</style>
 <body>
-    <h1>My first web page</h1>
+<html>
+<div id="top">
+
+<h1>CSS</h1>
+
+<p class="intro">This is the css tutorial</p>
+
+<p class="intro">...</p>
+
+</div>
+
+
+    <h1>CSS Basis</h1>
 	   	  <p> <em>How exciting</em> </p>
     <h2>What this is</h2>
     <p>A simple page put together using HTML</p>
     <h2>Why this is</h2>
+	
 <ul>
         <li>To learn HTML</li>
         <li>To show off</li>
@@ -83,7 +43,10 @@ table {
 <img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
 
 <select>
-    <option>Option 1</option>
-    <option>Option 2</option>
-    <option value="third option">Option 3</option>
-</select>
+    <option>Page 1</option>
+    <option>Page 2</option>
+    <option value="third option">Page 3</option>
+</select> 
+
+
+
